# video-surveillance-synopsis

./: .gitignore  README.md  detection_test.py  detector.py
VideoSynopsis/: VideoSynopsis.sln
VideoSynopsis/VideoSynopsis/: ComputingController.cpp  ComputingController.h  ComputingWorker.cpp  ComputingWorker.h  ExtractionAlgorithmEnum.h  FrameTypeEnum.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MotionDetection.cpp  MotionDetection.h  MotionExtractor.cpp  MotionExtractor.h  MotionExtractorFactory.cpp  MotionExtractorFactory.h  VideoSynopsis.vcxproj  VideoSynopsis.vcxproj.filters  cvmatandqimage.cpp  cvmatandqimage.h
VideoSynopsis/VideoSynopsisLibrary/: VideoSynopsisLibrary.cpp  VideoSynopsisLibrary.vcxproj  VideoSynopsisLibrary.vcxproj.filters
cmake/: .gitignore  CMakeLists.txt  main.cpp
cmake/videoSynopsisConsole/: CMakeLists.txt  main.cpp
cmake/videoSynopsisGui/: CMakeLists.txt
cmake/videoSynopsisGui/src/: DetectionsComponent.qml  PreviewComponent.qml  PreviewFilter.cpp  PreviewFilter.h  PreviewImageProvider.cpp  PreviewImageProvider.h  SynopsisComponent.qml  VideoSynopsisController.cpp  VideoSynopsisController.h  main.cpp  main.qml  qml.qrc
cmake/videoSynopsisLibrary/: CMakeLists.txt
cmake/videoSynopsisLibrary/include/: DetectorOutputTypeEnum.h  videoSynopsisLib.h
cmake/videoSynopsisLibrary/src/: Detector.cpp  Detector.h  KalmanFilter.h  Track.h
cmake/videoSynopsisLibrary/src/Database/: DataTypes.h  Database.cpp  Database.h
cmake/videoSynopsisLibrary/src/Detector/: Detector.cpp  Detector.h  DetectorOutputTypeEnum.h  DetectorSettings.cpp  DetectorSettings.h
cmake/videoSynopsisLibrary/src/Tracker/: KalmanFilter.cpp  KalmanFilter.h  Track.cpp  Track.h  Tracker.cpp  Tracker.h
cmake/videoSynopsisLibrary/src/Utils/: Utils.h
python/: .gitignore  detection_test.py  detector.py  synopsis.py  tracker.py  tracking_test.py
windows/: .gitignore
windows/VideoSynopsis/: VideoSynopsis.sln
windows/VideoSynopsis/VideoSynopsisConsole/: VideoSynopsisConsole.cpp  VideoSynopsisConsole.vcxproj  VideoSynopsisConsole.vcxproj.filters
windows/VideoSynopsis/VideoSynopsisLibrary/: Detector.cpp  Detector.h  KalmanFilter.cpp  Track.cpp  Track.h  Tracker.cpp  Tracker.h  VideoSynopsisLibrary.cpp  VideoSynopsisLibrary.vcxproj  VideoSynopsisLibrary.vcxproj.filters
